syntax = "proto3";

package grpc.example.api.v1;

import "swagger/annotations.proto";

option java_package = "com.wix.grpc.example.api.v1";

message Account {
    string id       = 1 [(wix.swagger.field).readOnly = true];
    string name     = 2;
    string country  = 3;
    string email    = 4 [(wix.swagger.field).readOnly = true];

    Address address = 10;
}

message Address {
    string zipCode  = 1;
    string city     = 2;
    string state    = 3;
    string address  = 4;
}